--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-scripts": "3.1.0",
+    "react-redux": "^7.1.0",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.1"
   },
   "scripts": {
